+all-news/about/header menu

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,8 +3,7 @@
 		<div class="container">
 			<div class="footer__text">
 				<a href="#" class="footer__logo">
-					<span class="footer__gray">Dis</span>
-					<span>LIFE</span>
+					<img src="img/footer-logo.svg" alt="">
 				</a>
 				<div class="footer__question">КАК ЖИТЬ В РОССИИ И НЕ УМЕРЕТЬ</div>
 			</div>
