--- a/src/sass/_footer.sass
+++ b/src/sass/_footer.sass
@@ -3,9 +3,8 @@
 		+clr
 	&__top
 		background-color: #9bc1bc
-		padding: 35px 0 17px
+		padding: 23px 0 17px
 		+r3
-			text-align: center
 			padding: 5px 0 22px 
 	&__bottom
 		background-color: #657977
@@ -17,19 +16,9 @@
 		font-size: 0
 		line-height: 1
 		float: left
-		+r3
-			display: inline-block
-			vertical-align: top
-			float: none
-		span
-			display: inline-block
-			vertical-align: top
-			font-size: 40px
-			position: relative
-	&__gray
-		color: #d4e5e3
-		margin-right: -9px
-		z-index: 2
+		width: 96px
+		img
+			width: 100%
 	&__question
 		float: right
 		+light
@@ -38,7 +27,7 @@
 		line-height: 1
 		letter-spacing: 0.2em
 		color: #fff
-		padding: 3px 0
+		padding: 4px 0
 		+r1
 			font-size: 28px
 			padding: 6px 0
@@ -46,13 +35,14 @@
 			font-size: 22px
 			padding: 5px 0
 		+r3
-			clear: both
 			float: none
-			font-size: 20px
-			line-height: 24px
-			padding: 5px 10px 
+			font-size: 17px
+			line-height: 22px
+			padding: 0px 50px 0 10px
+			overflow: hidden
+			text-align: left
 	&__text
-		padding-bottom: 8px
+		padding-bottom: 18px
 		+clr
 	&__social
 		font-size: 0
