--- a/src/sass/lib/_svgfont.sass
+++ b/src/sass/lib/_svgfont.sass
@@ -5,9 +5,8 @@
 	font-weight: normal
 	font-style: normal
 
-$icon-sepa: "\EA01"
-$icon-skrill: "\EA02"
-$icon-vk: "\EA03"
+$icon-logo: "\EA01"
+$icon-vk: "\EA02"
 
 
 %icon
@@ -24,9 +23,7 @@ $icon-vk: "\EA03"
 	@extend %icon
 	display: inline-block
 
-.icon-sepa:before
-	content: $icon-sepa
-.icon-skrill:before
-	content: $icon-skrill
+.icon-logo:before
+	content: $icon-logo
 .icon-vk:before
-	content: $icon-vk
+	content: $icon-vk
