--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -897,6 +897,9 @@
 		li
 			padding: 10px 0
 			border-top: 1px solid #e5e5e5
+			transition: color 0.25s 
+			&:hover
+				color: #ff8c61
 			&:first-child
 				border-top: none
 
@@ -1300,3 +1303,270 @@
 		display: none
 		.article
 			padding-top: 15px
+
+.special-projects
+	margin-bottom: 30px
+	&__list
+		font-size: 0
+		line-height: 1.1
+		border-bottom: 1px solid #ff8c61 
+		padding: 0 0 6px 
+		li
+			display: inline-block
+			vertical-align: bottom
+			position: relative
+			margin-bottom: 10px
+	&__heading, &__item
+		width: 25%
+	&__heading
+		font-size: 24px
+		color: #ff8c61
+		+med
+		+r1
+			width: 100%
+			display: block
+		a
+			color: #ff8c61
+	&__item
+		padding-left: 16px
+		+r1
+			width: 33.33% 
+		+r3
+			width: 100%
+		&:before
+			content: ""
+			position: absolute 
+			top: 2px
+			bottom: 2px
+			left: 0
+			border-left: 6px solid #ff8c61
+		a
+			color: #282828
+			transition: color 0.25s
+			&:hover
+				color: #ff8c61 
+	&__title
+		font-size: 22px
+		+bold
+	&__text
+		font-size: 16px
+	&__link
+		display: block
+
+.about
+	max-width: 850px
+	margin: 0 auto  
+	&__top
+		border-bottom: 2px solid #9bc1bc
+		padding-bottom: 55px
+		margin-bottom: 55px
+		+r3
+			padding-bottom: 30px
+			margin-bottom: 30px 
+		h1
+			margin-bottom: 28px
+		p
+			color: #282828
+			font-size: 20px
+			line-height: 23px
+			+med
+			+r3
+				font-size: 18px
+				line-height: 1.3
+	&__text
+		color: #282828
+		p
+			+reg
+			font-size: 18px
+			line-height: 30px
+			margin-bottom: 29px
+			+r3
+				font-size: 16px
+				line-height: 1.6
+				margin-bottom: 20px
+			b
+				+bold
+			a
+				color: #76938f
+				&:hover
+					text-decoration: underline
+	h5
+		line-height: 30px
+		font-size: 24px
+		+med
+		margin-bottom: 9px
+
+.send-message
+	margin-bottom: 50px
+	label, &__label
+		display: block
+		margin-bottom: 7px
+	&__label
+		color: #282828
+		font-size: 17px
+		line-height: 20px
+		+med
+	&__text
+		color: #9c9c9c
+		font-size: 14px
+		line-height: 18px
+		max-width: 630px
+		padding: 0 0 15px 
+
+.captcha
+	margin-bottom: 10px
+	img
+		max-width: 100%
+
+.input-full, .textarea-full
+	background-color: #f4f5f1
+	border: 1px solid #9bc1bc
+	width: 100%
+	display: block
+	color: #4a4a4a
+	padding: 17px 15px 14px
+	font-size: 14px
+	+reg  
+
+.textarea-full
+	resize: none
+
+.btn-full
+	width: 100%
+	max-width: 302px
+	background-color: #9bc1bc
+	padding: 12px 10px 10px
+	color: #fff
+	font-size: 18px
+	line-height: 1 
+	+reg
+	position: relative
+	&:hover
+		&:before
+			width: 100%
+	&:before
+		content: "" 
+		position: absolute
+		top: 0
+		bottom: 0
+		left: 0
+		width: 0
+		transition: width 0.25s
+		background: darken(#9bc1bc, 10%) 
+	span
+		position: relative
+		z-index: 1
+.photo
+	width: 100%
+	img
+		width: 100%
+
+.team-list
+	line-height: 30px
+	text-align: center
+	+med
+	padding: 20px 0 
+	+r3
+		line-height: 1.6
+	li
+		padding: 15px 0 
+	span, small
+		display: block
+	small
+		color: #949494
+		font-size: 18px
+		+r3
+			font-size: 16px
+	span
+		color: #282828
+		font-size: 22px
+		+r3
+			font-size: 18px
+
+.all-news
+	&__top
+		padding: 50px 0 23px 
+	&__section
+		border-top: 1px solid #9bc1bc
+	&__date
+		color: #9bc1bc
+		line-height: 1
+		float: left
+		width: 110px
+		padding: 24px 0 0
+		+r3
+			width: 100%
+			float: none
+		span, small
+			display: block
+			+r3
+				display: inline-block
+				vertical-align: bottom
+		span
+			font-size: 52px
+			+med
+			+r3
+				font-size: 42px
+		small
+			font-size: 16px
+			+r3
+				padding-bottom: 7px
+	&__items
+		overflow: hidden
+	&__item
+		color: #282828
+		border-bottom: 1px solid #e6e6e6
+		padding: 24px 0 25px 0
+		+clr
+		position: relative
+		min-height: 178px
+		+r3
+			min-height: 1px
+			padding: 20px 0 
+		&_image
+			padding-right: 180px 
+			+r3
+				padding-right: 0
+		&:last-child
+			border: none
+	&__title
+		font-size: 26px
+		line-height: 30px
+		+med
+		margin: 0 0 5px 
+		+r3
+			font-size: 20px
+			line-height: 22px
+	&__text
+		font-size: 18px
+		line-height: 22px
+		+light
+		margin-bottom: 10px
+		+r3
+			font-size: 16px
+			line-height: 20px
+	&__time
+		color: #b7b7b7
+		font-size: 13px
+		letter-spacing: 1.08px
+		line-height: 16px
+		+r3
+			font-size: 11px
+			line-height: 13px
+			letter-spacing: 0.92px
+	&__info
+		overflow: hidden
+	&__img
+		width: 160px
+		height: 117px
+		+cover
+		position: absolute
+		top: 30px
+		right: 0
+		+r3
+			width: 290px
+			max-width: 100%
+			position: relative
+			top: auto
+			height: 214px
+			margin-top: 15px
