--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -1570,3 +1570,20 @@
 			top: auto
 			height: 214px
 			margin-top: 15px
+
+.special
+	color: #282828 
+	max-width: 640px
+	position: relative
+	padding: 0 110px 
+	&__letters
+		font-size: 110px
+		line-height: 95px
+		margin: 0 0 -10px 
+		+med
+		float: left
+	p
+		font-size: 18px
+		line-height: 30px
+		a
+			color: #9bc1bc
