--- a/src/sass/lib/_sprite.sass
+++ b/src/sass/lib/_sprite.sass
@@ -1,6 +1,10 @@
 $icons: (0:0)
-$icons: map-merge($icons,(codedby: (X: 0px, Y:-9px, W: 47px, H: 5px, TW: 49px, TH: 14px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(coderiver: (X: 0px, Y:0px, W: 49px, H: 5px, TW: 49px, TH: 14px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(codedby: (X: -48px, Y:-66px, W: 47px, H: 5px, TW: 146px, TH: 95px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(coderiver: (X: -48px, Y:-57px, W: 49px, H: 5px, TW: 146px, TH: 95px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(drugs: (X: -50px, Y:0px, W: 46px, H: 42px, TW: 146px, TH: 95px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(edu: (X: 0px, Y:-57px, W: 44px, H: 38px, TW: 146px, TH: 95px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(home: (X: -100px, Y:0px, W: 46px, H: 42px, TW: 146px, TH: 95px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(reabilitation: (X: 0px, Y:0px, W: 46px, H: 53px, TW: 146px, TH: 95px, IMG: '../img/icons.png')))
 
 
 // Gets an attribute from the sass map
@@ -41,11 +45,35 @@ $icons: map-merge($icons,(coderiver: (X: 0px, Y:0px, W: 49px, H: 5px, TW: 49px, 
 //	width: 47px
 //	height: 5px
 //	background-image: url('../img/icons.png')
-//	background-position: 0px -9px
+//	background-position: -48px -66px
 //
 //.icon-coderiver
 //	width: 49px
 //	height: 5px
+//	background-image: url('../img/icons.png')
+//	background-position: -48px -57px
+//
+//.icon-drugs
+//	width: 46px
+//	height: 42px
+//	background-image: url('../img/icons.png')
+//	background-position: -50px 0px
+//
+//.icon-edu
+//	width: 44px
+//	height: 38px
+//	background-image: url('../img/icons.png')
+//	background-position: 0px -57px
+//
+//.icon-home
+//	width: 46px
+//	height: 42px
+//	background-image: url('../img/icons.png')
+//	background-position: -100px 0px
+//
+//.icon-reabilitation
+//	width: 46px
+//	height: 53px
 //	background-image: url('../img/icons.png')
 //	background-position: 0px 0px
 //
