--- a/src/sass/_inner.sass
+++ b/src/sass/_inner.sass
@@ -326,7 +326,20 @@ $green: #9bc1bc
 			font-size: 40px
 		.text-big
 			font-size: 20px
-
+	&_special
+		+r2
+			min-height: 1px
+		.fullheight
+			&__in
+				+r2
+					padding: 50px 0 10px
+		h1
+			+r2
+				font-size: 36px
+		.text-big
+			+r2
+				font-size: 18px
+				line-height: 1.2
 
 // slider on inner pages
 .inner-slider
