--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -643,6 +643,48 @@
 					background-color: rgba(58, 34, 48, 0.44)
 					border: 1px solid #979797
 					content: ""
+			&__link-text
+				left: 440px
+				+r1
+					left: 300px
+				+r3
+					left: 0
+					bottom: auto
+					padding-top: 30px
+	&_puzzles
+		padding: 0
+		+r3
+			padding: 150px 0 0
+		.item-banner
+			&__bg
+				left: 405px
+				background-size: cover 
+				background-position: center center
+				+r1
+					left: 265px
+				+r3
+					left: 0
+					bottom: auto
+					height: 150px
+					background-position: top center 
+				&:before
+					content: "" 
+					position: absolute
+					top: 0
+					bottom: 0
+					left: 0
+					right: 0
+					bottom: 0
+					background-color: rgba(58, 34, 48, 0.44)
+		.box-form
+			border-radius: 0
+			background: #fff 
+			max-width: 410px
+			padding-bottom: 16px
+			+r1
+				max-width: 270px
+			+r3
+				max-width: 100%
 	.btn
 		position: absolute
 		top: 10px
@@ -738,6 +780,29 @@
 				background: #E17952
 			&:hover
 				&:before
+	&__link-text
+		position: absolute
+		bottom: 0
+		left: 0
+		right: 0
+		padding: 0 50px 55px 20px
+		text-align: center 
+		+r2
+			padding: 0 30px 55px 
+		+r3
+			padding: 0 15px 15px 
+		div
+			margin: 0
+			color: #fff
+			+bold
+			font-size: 22px
+			line-height: 24px 
+			+r2
+				font-size: 18px
+				line-height: 20px
+			+r3
+				font-size: 16px
+				line-height: 18px
 
 .item-image
 	position: relative
@@ -784,6 +849,7 @@
 	border-radius: 6px
 	padding: 20px 40px 33px
 	max-width: 380px
+	color: #282828 
 	+r1
 		max-width: 270px
 		padding: 20px 20px 30px
@@ -809,6 +875,14 @@
 			font-size: 18px
 			line-height: 26px
 			margin-bottom: 15px
+	&__text
+		+reg
+		font-size: 18px
+		line-height: 22px
+		margin-bottom: 17px
+		+r1
+			font-size: 16px
+			line-height: 20px
 	&__field
 		margin-bottom: 19px
 	&__btn
@@ -1306,6 +1380,9 @@
 	+r3
 		width: 100%
 
+.news-column
+	&__more
+		padding: 20px 0 0 
 
 .accordion
 	&__block
@@ -2094,6 +2171,7 @@
 			color: #2020dc
 			font-size: 44px
 			line-height: 52px
+			margin-bottom: 3px
 		span
 			+reg
 			font-size: 18px
@@ -2383,6 +2461,16 @@
 	i
 		font-size: 14px
 		margin: 0 15px 0 0
+	&_big
+		text-align: center
+		width: 100%
+		span
+			font-size: 18px
+			line-height: 1
+			padding-top: 2px
+		i
+			font-size: 16px
+			margin: 0 10px 0 0
 
 .special-menu
 	padding: 10px 0 0 
@@ -2470,3 +2558,328 @@
 	i
 		font-size: 20px
 		margin-right: 12px
+.special-top
+	margin-bottom: 50px
+	+r2
+		margin-bottom: 0
+.special-text
+	color: #282828
+	margin-bottom: 30px
+	p
+		font-size: 20px
+		line-height: 23px
+		+med
+		+r3
+			font-size: 16px
+			line-height: 20px
+	h1, .h1
+		margin-bottom: 40px
+		+r3
+			margin-bottom: 20px
+
+.special-right
+	text-align: center
+	.btn-full
+		margin-bottom: 14px
+		width: 100%
+	.link
+		margin-bottom: 20px
+	.social
+		background: #fff 
+.link
+	color: #9bc1bc
+	font-size: 16px
+	line-height: 24px
+	text-decoration: underline
+	display: inline-block
+	vertical-align: top
+
+.list-items
+	color: #282828
+	padding-bottom: 30px
+	&:after
+		padding-top: 30px
+		content: "" 
+		display: block
+		margin: 0 auto
+		max-width: 410px
+		border-bottom: 2px solid #9bc1bc
+	&_mod
+		&:after
+			display: none
+	&__title
+		font-size: 14px
+		letter-spacing: 2px
+		line-height: 17px
+		+med
+		padding: 0 110px 20px
+		+r3
+			padding: 0 0 20px
+			text-align: center 
+
+.list-item
+	+clr
+	background-color: #fff
+	margin-bottom: 1px
+	&__number
+		float: left
+		text-align: right
+		opacity: 0.25
+		color: #9bc1bc
+		font-size: 144px
+		line-height: 150px
+		+med
+		padding: 0 15px 
+		width: 220px 
+		+r2
+			font-size: 100px
+			line-height: 125px
+			width: 150px
+		+r3
+			font-size: 50px
+			width: 100%
+			text-align: left
+			line-height: 1
+			padding: 20px  
+	&__info
+		overflow: hidden
+		color: #282828
+		padding: 32px 20px 32px 0
+		+r3
+			clear: both
+			padding: 0 20px 32px 
+	h5
+		font-size: 28px
+		line-height: 1
+		+med
+		+r2
+			font-size: 24px
+		+r3
+			font-size: 20px
+	p
+		font-size: 18px
+		line-height: 24px
+		+light
+		padding-top: 10px
+		max-width: 850px
+		+r2
+			font-size: 16px
+			line-height: 22px
+	&__link
+		display: inline-block
+		vertical-align: top
+		color: #f2c05e
+		font-size: 14px
+		line-height: 17px
+		text-decoration: underline
+		+regi
+		margin: 6px 0 7px 
+		&:hover
+			text-decoration: none
+
+.user-profile
+	+clr
+	padding-bottom: 30px
+	border-bottom: 3px solid #e6e6e6
+	&__imgs
+		width: 55%
+		float: left
+	&__info
+		width: 45%
+		float: right
+		padding-left: 30px
+		padding-right: 5px
+	&__title, &__years
+		+bold
+	&__title
+		color: #33333b
+		font-size: 27px
+		line-height: 32px
+		margin-bottom: 6px
+	&__years
+		font-size: 22px
+		line-height: 26px
+		color: #8e8e8e
+		margin-bottom: 26px
+	&__time
+		color: #8e8e8e
+		font-size: 14px
+		line-height: 17px
+		+regi
+		margin-bottom: 20px
+	.btn-mail
+		margin-bottom: 9px
+	.profile-title
+		margin-bottom: 3px
+	&__text
+		li
+			padding-bottom: 22px
+		small, span
+			display: block
+		small
+			color: #8e8e8e
+			font-size: 14px
+			line-height: 17px
+		span
+			color: #33333b
+			font-size: 16px
+			line-height: 18px
+
+.profile-title
+	color: #33333b
+	font-size: 22px
+	line-height: 26px
+	span
+		color: #fff
+		font-size: 16px
+		line-height: 18px
+		min-width: 21px
+		height: 21px
+		padding: 2px 6px 1px 
+		background-color: #a5a5a5
+		border-radius: 54px
+		display: inline-block
+		vertical-align: top
+		margin-top: 2px
+		+med
+
+.user-photo
+	margin-bottom: 5px
+	&__item 
+		height: 514px
+		+vertical
+		background: #f5f7f7 
+		img
+			display: inline-block
+			vertical-align: middle
+			max-width: 100%
+			max-height: 100%
+
+.user-photos
+	position: relative
+	&__item
+		height: 100px
+		cursor: pointer
+		padding: 0 5px 0 0 
+		img
+			height: 100%
+	&__arr
+		font-size: 26px
+		color: #ff8c61
+		line-height: 1
+		position: absolute
+		top: 50%
+		z-index: 20
+		height: 26px
+		background: none
+		margin-top: -13px
+	&__prev
+		left: -15px
+	&__next
+		right: -15px
+
+.friends
+	padding: 10px 0 30px
+	border-bottom: 3px solid #e6e6e6
+	.profile-title
+		padding: 0 0 0 110px
+	&__container
+		padding: 22px 0 13px 
+	&__row, &__items
+		+clr
+	&__info
+		float: left
+		font-size: 16px
+		line-height: 18px
+		width: 110px
+		div
+			color: #333
+			margin-bottom: 9px
+		span
+			display: inline-block
+			vertical-align: top
+			color: #fff
+			padding: 2px 6px 1px 
+			background-color: #ff8c61
+			border-radius: 54px
+			min-width: 21px
+			text-align: center
+			+med
+	&__link
+		display: block
+	&__items
+		font-size: 0
+		padding: 5px 0 0 110px
+	.profile-more
+		padding: 5px 110px 0
+
+.user-block
+	width: 33.33%
+	display: inline-block
+	vertical-align: top
+	padding: 0 0 18px 
+	&__container
+		display: block
+		font-size: 0
+	&__img
+		width: 48px
+		height: 48px
+		+cover
+		margin: 0 8px 3px 0
+	&__name
+		color: #343434
+		font-size: 14px
+		line-height: 16px
+		max-width: 120px
+		+med
+	&__img, &__name
+		display: inline-block
+		vertical-align: bottom
+
+.link-more
+	color: #9bc1bc
+	display: inline-block
+	vertical-align: top
+	font-size: 0
+	&:hover
+		span
+			text-decoration: none
+	i
+		font-size: 20px
+		margin-right: 6px
+	span
+		font-size: 18px
+		line-height: 21px
+		text-decoration: underline
+	i, span
+		display: inline-block
+		vertical-align: middle
+.comments
+	padding: 10px 0 30px 110px
+	border-bottom: 3px solid #e6e6e6
+	.profile-more
+		padding: 20px 0 13px 
+.comment
+	padding: 15px 0 20px
+	&__top
+		font-size: 0
+	&__time, &__theme
+		line-height: 16px
+		font-size: 13px
+		display: inline-block
+		vertical-align: top
+		margin-bottom: 10px
+	&__time
+		color: #8e8e8e
+		padding-right: 5px
+	&__theme
+		color: #9bc1bc
+		i
+			font-size: 14px
+			margin-right: 5px
+	&__text
+		p
+			color: #000
+			font-size: 14px
+			line-height: 17px
+			max-width: 520px
